@@ -4,7 +4,7 @@ import java.io.ByteArrayOutputStream
 import java.net.{InetSocketAddress, InetAddress}
 
 import org.apache.zookeeper.server.persistence.FileTxnSnapLog
-import org.apache.zookeeper.server.{NIOServerCnxn, ZooKeeperServer}
+import org.apache.zookeeper.server.ZooKeeperServer
 import org.junit.runner.RunWith
 import org.scalatest.concurrent.{IntegrationPatience, Eventually}
 import org.scalatest.junit.JUnitRunner
@@ -21,6 +21,7 @@ import com.twitter.finagle.memcachedx.util.ChannelBufferUtils._
 import com.twitter.finagle.zookeeper.ZookeeperServerSetCluster
 import com.twitter.io.Buf
 import com.twitter.util._
+import com.twitter.zk.ServerCnxnFactory
 
 @RunWith(classOf[JUnitRunner])
 class MigrationClientTest extends FunSuite with BeforeAndAfterEach with BeforeAndAfter with Eventually with IntegrationPatience {
@@ -34,7 +35,7 @@ class MigrationClientTest extends FunSuite with BeforeAndAfterEach with BeforeAn
   var zookeeperServer: ZooKeeperServer = null
   var zookeeperServerPort: Int = 0
   var zookeeperClient: ZooKeeperClient = null
-  var connectionFactory: NIOServerCnxn.Factory = null
+  var connectionFactory: ServerCnxnFactory = null
 
   var testServers: List[TestMemcachedServer] = List()
 
@@ -47,7 +48,7 @@ class MigrationClientTest extends FunSuite with BeforeAndAfterEach with BeforeAn
     zookeeperServer = new ZooKeeperServer(
       new FileTxnSnapLog(createTempDir(), createTempDir()),
       new ZooKeeperServer.BasicDataTreeBuilder)
-    connectionFactory = new NIOServerCnxn.Factory(new InetSocketAddress(loopback, 0))
+    connectionFactory = ServerCnxnFactory(loopback)
     connectionFactory.startup(zookeeperServer)
     zookeeperServerPort = zookeeperServer.getClientPort
 
